# text2svg

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CNAME  MANIFEST.in  README.md  index.html  main.c  meson.build  setup.cfg  setup.py  sitemap.xml  text2svg.c
.github/: stale_branch.py
.github/workflows/: build.yml  clean-docs.yml  code-quality.yml  deploy-docs.yml  tests.yml  (+2 more)
build-test/: changelog.html  examples.html  genindex.html  index.html  install.html  py-modindex.html  reference.html  release.html  search.html  sitemap.xml
docs/: get-tag.py  requirements.txt
feat-attributes/: Release-procedure.html  changelog.html  examples.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  reference.html  release.html  search.html  searchindex.js  sitemap.xml
feat-numpy/: changelog.html  examples.html  genindex.html  index.html  install.html  py-modindex.html  reference.html  release.html  search.html  sitemap.xml
latest/: changelog.html  examples.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  reference.html  release.html  search.html  searchindex.js  sitemap.xml
py-module/: .gitignore  hello.pyx  setup.py  text2svg.pxd  text2svg.pyx
scripts/: download_dlls.py
tests/: generate_data.py  test_api.py  test_import.py  test_np_arrays.py
tests/c_module/: meson.build  text2svg.h
text2svg/: __init__.py  __main__.py  __version__.py  buf.pxd  buf.pyx  cli.py  ctext2np.pxd  ctext2np.pyx  ctext2svg.pxd  ctext2svg.pyx  logger.pxd  logger.pyx  settings.py  text2np.py
text2svg-v0.3.0/: changelog.html  examples.html  genindex.html  index.html  install.html  py-modindex.html  reference.html  release.html  search.html  sitemap.xml
v0.3.0/: changelog.html  examples.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  reference.html  release.html  search.html  sitemap.xml
v0.3.0-rc1/: changelog.html  examples.html  genindex.html  index.html  install.html  py-modindex.html  reference.html  release.html  search.html  sitemap.xml
windll/: LICENSE.win32  download_dlls.py  inject-dlls.py
(+191 files in other folders)
