[metadata]
license_files =
   LICENSE
   windll/*.txt
license = GPL version 3
project_urls =
    Issue tracker = https://github.com/naveen521kk/text2svg/issues
    Documentation = https://text2svg.syrusdark.website
    Download = https://pypi.org/project/text2svg
	Code = https://github.com/naveen521kk/text2svg